--- a/curency_converter/package.json
+++ b/curency_converter/package.json
@@ -14,6 +14,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
     "web-vitals": "^1.0.1"
   },
